--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -5,39 +5,66 @@ $left_spacing: $space-8;
 $right_spacing: $space-8;
 
 .site_header {
+  margin: 0;
+  padding: 0;
+  border-bottom: 1px solid $colors-gray6;
+  position: sticky;
+  top: 0;
+  left: 0;
+  background-color: $colors-panel;
+  width: 100%;
+  height: 10vh;
+  z-index: $zIndices-3;
+  display: inline-grid;
+
+  .inner {
     margin: 0;
     padding: 0;
-    border-bottom: 1px solid $colors-gray6;
-    position: sticky;
-    top: 0;
-    left: 0;
-    background-color: $colors-panel;
-    width: 100%;
-    height: 10vh;
-    z-index: $zIndices-3;
+    display: flex;
+    padding: 0em $right_spacing 0em $left_spacing;
+    justify-content: space-between;
+    align-items: center;
 
-    .inner {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        padding: 0em $right_spacing 0em $left_spacing;
-        justify-content: space-between;
+    > .col_1 {
+      flex-basis: calc(25% - $left_spacing);
+
+      > img {
+        max-width: 125px;
+      }
+    }
+    > .col_2 {
+      display: flex;
+      flex-basis: calc(70% - 65px);
+      text-align: -webkit-right;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      align-content: center;
+      align-items: center;
+      justify-content: space-between;
+
+      .search_container {
+        @include search($search-2, 350px, black, $colors-gray8);
+      }
+
+      nav ul {
+        display: inline-flex;
+        flex-direction: row;
+        align-content: center;
         align-items: center;
 
-        > .col_1 {
-            flex-basis: calc(25% - $left_spacing);
-
-            > img {
-                max-width: 125px;
+        li{
+            list-style-type: none;
+            font-size: $fontSizes-3;
+            text-transform: uppercase;
+            color: $colors-gray11;
+            margin-right: 1rem;
+            transition: 0.1s ease-in;
+            font-weight: bold;
+            &:hover{
+                color: $colors-violet11;
             }
         }
-        > .col_2 {
-            flex-basis: calc(70% - $right_spacing);
-            text-align: -webkit-right;
-
-            .search_container {
-                @include search($search-2, 350px, black, $colors-gray8);
-            }
-        }
+      }
     }
+  }
 }
