--- a/styles/mixins/_search.scss
+++ b/styles/mixins/_search.scss
@@ -56,6 +56,17 @@
                 padding: $space-2 $space-4;
                 border-bottom: 1px solid $colors-gray4;
                 box-sizing: border-box;
+                display: flex;
+                flex-direction: row;
+
+                .search_toolIcon{
+                    width: 25%;
+                    margin: auto;
+                }
+
+                .search_toolInner{
+                    width: 75%;
+                }
 
                 .search_toolName{
                     text-decoration: none;
@@ -65,7 +76,7 @@
                 }
 
                 .search_categoryName{
-                    text-decoration: none;
+                    text-transform: uppercase;
                     color: $colors-violet10;
                     font-size: $fontSizes-1;
                     font-weight: 500;
