--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -154,3 +154,7 @@ $search-2: 125px;
 $search-3: 175px;
 $search-4: 225px;
 $search-5: 250px;
+
+$primary: #4F2EDC;
+$primary-light: #947ADA;
+$gray: #9A9999;
