--- a/styles/mixins/_input_fields.scss
+++ b/styles/mixins/_input_fields.scss
@@ -12,6 +12,24 @@ select:focus {
   outline: none;
 }
 
+.textarea-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.textarea-wrapper textarea {
+  flex: 1;
+}
+
+.textarea-wrapper button {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+}
+
+
 .form__field {
   overflow-x: hidden;
   border: 1px solid $colors-gray6;
@@ -52,6 +70,7 @@ select:focus {
     position: absolute;
     margin-left: $space-3;
     margin-top: 10px;
+    box-shadow: gray 0px 0px 1px;
   }
 }
 
@@ -73,7 +92,7 @@ select:focus {
   width: 100%;
   height: 70px;
   overflow-y: hidden;
-  font-size: $fontSizes-5;
+  font-size: $fontSizes-4 - 1px;
 }
 
 .form__group {
@@ -162,6 +181,10 @@ body {
   padding-bottom: 100px;
   margin: 0;
   background-color: #ebf3f3;
+}
+
+.field{
+  cursor: pointer;
 }
 
 .field_drop_selection {
@@ -682,7 +705,7 @@ input[type="radio"] {
 /* === range theme and appearance === */
 input[type="range"] {
 	font-size: 1.5rem;
-	width: 12.5em;
+	width: 100%;
 }
 
 input[type="range"] {
@@ -797,7 +820,7 @@ input[type="range"]:active::-webkit-slider-thumb {
 
 input[type="range"]::-webkit-slider-runnable-track {
 	background: linear-gradient(var(--track-color) 0 0) scroll no-repeat center /
-		100% calc(var(--track-height) + 1px);
+		100% calc(var(--track-height) - 1px);
 }
 
 input[type="range"]:disabled::-webkit-slider-thumb {
@@ -866,3 +889,80 @@ input[type="range"]:active::-moz-range-progress {
 input[type="range"]:disabled::-moz-range-thumb {
 	cursor: not-allowed;
 }
+
+.avatar-preview {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: $space-3;
+  right: $space-3;
+
+  img{
+    right: $space-3;
+    position: absolute;
+    transition: 0.1s ease-in-out;
+  }
+}
+
+.avatar-preview .clear-button{
+  top: $space-1;
+  right: $space-1;
+
+  i{
+    background: $colors-gray8;
+    border-radius: $radii-round;  
+    color: $colors-gray11;
+    transition: 0.1s ease-in;
+    font-size: 17px;
+    font-weight: bold;
+    &:hover{
+      filter: brightness(93%)
+    }
+  }
+}
+
+.hljs{
+  font-size: 15px;
+}
+
+.hljs-attribute{
+  color: #444;
+  font-weight: 700;
+    font-size: 15px;
+}
+
+.hljs-number{
+  color: $colors-violet9;
+    font-size: 15px;
+}
+
+.form_field_med{
+  width: 100%;
+    height: 100px;
+    overflow-y: hidden;
+    font-size: 16px;
+}
+
+.tweet-mention,
+.tweet-hashtag,
+.tweet-link {
+  color: rgb(29, 161, 242);
+  /* Optionally, you can add more styles like font-weight or text-decoration */
+  /* font-weight: bold; */
+  /* text-decoration: underline; */
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+
+
