--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -165,6 +165,7 @@ table.table{
     justify-content: space-between;
     grid-auto-flow: column;
     grid-gap: $space-5;
+    grid-template-columns: auto auto auto;
 
     .tweetPreview_profile{
       width: 50px;
@@ -206,10 +207,15 @@ table.table{
     }
 
     .tweetPreview_middle{
+      width: 80%;
       .tweetPreview_content{
-        padding: $space-1 0px;
+        padding: 5px 0px;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        max-width: 100%;
+        width: 600px;
         font-size: 15px;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif !important;
+        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif !important;
 
         .tweet-mention, .tweet-hashtag, .tweet-link{
           font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
