--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,4 +1,8 @@
 // Colors
+$primary-color: #BA514D;
+$primary-color2: #F07167;
+$primary-vibrant: #E75C5A;
+$primary-color3:#fff0ed;
 $colors-text: rgb(38, 39, 75);
 $colors-button-bg: #6c6cfe;
 $colors-button-hover: #6161e4;
