--- a/styles/mixins/_input_fields.scss
+++ b/styles/mixins/_input_fields.scss
@@ -131,6 +131,7 @@ select:focus {
   .bar {
     width: 40px;
     height: 40px;
+    transition: 0.3s ease;
     border-radius: $radii-4;
   }
   .red {
