Fixed some errors

--- a/styles/dropDownSelection.module.scss
+++ b/styles/dropDownSelection.module.scss
@@ -59,7 +59,8 @@
 .icon {
   position: absolute;
   right: $space-4;
-  top: 50%;
+  top: 40%;
+  width: 10px;
   color: $primary-vibrant;
   cursor: pointer;
   transition: transform 0.2s ease;
