--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -52,19 +52,75 @@ $right_spacing: $space-8;
         align-content: center;
         align-items: center;
 
-        li{
-            list-style-type: none;
-            font-size: $fontSizes-3;
-            text-transform: uppercase;
-            color: $colors-gray11;
-            margin-right: 1rem;
-            transition: 0.1s ease-in;
-            font-weight: bold;
-            &:hover{
-                color: $colors-violet11;
-            }
+        li {
+          list-style-type: none;
+          font-size: $fontSizes-3;
+          text-transform: uppercase;
+          color: $colors-gray11;
+          margin-right: 1rem;
+          height: 100%;
+          transition: 0.1s ease-in;
+          font-weight: bold;
+          box-sizing: border-box;
+          &:hover {
+            color: $colors-violet11;
+          }
         }
       }
     }
   }
 }
+
+.dropDown_trigger {
+  cursor: pointer;
+  position: relative;
+}
+
+.dropDown_items{
+  display: none;
+  position: absolute;
+  top: 7vh;
+  width: 350px;
+  z-index: -40000;
+  border: 1px solid #dbdbdb;
+  border-radius: 6px;
+  text-align: left;
+  max-height: 60vh;
+  background-color: #fff;
+  overflow-y: auto;
+  overflow-x: hidden;
+  animation: expandFromTop 0.2s ease;
+  transition: width .05s ease-in-out,padding .05s ease-in-out;
+
+  &:hover{
+    display: block;
+  }
+
+  .dropDown_item{
+    padding: 10px 20px;
+    border-bottom: 1px solid #ededed;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+
+    &:hover{
+      background-color: $colors-violet3;
+  }
+  }
+}
+
+.dropDown_items.open{
+  display: block !important;
+}
+
+@keyframes expandFromTop {
+  0% {
+    transform-origin: top;
+    transform: scaleY(0);
+  }
+  100% {
+    transform-origin: top;
+    transform: scaleY(1);
+  }
+}
+
